--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,11 @@
     "tuple": "cpp",
     "type_traits": "cpp",
     "typeinfo": "cpp",
-    "utility": "cpp"
+    "utility": "cpp",
+    "sstream": "cpp",
+    "vector": "cpp",
+    "__hash_table": "cpp",
+    "cmath": "cpp",
+    "unordered_set": "cpp"
   }
 }
